# spreadsheet-ods

./: .gitignore  Cargo.toml  README.md  TODO.md  UNTOUCHED.md  changes.md  crate.md
benches/: bench.rs  bench_read.rs
examples/: doc_sample.rs  formatting.rs  negative_number_red.rs  read_data.rs  sheet_features.rs
sample/: .~lock.sample0.ods#  sample0.ods
sample/sample0/: content.xml  meta.xml  settings.xml  styles.xml
src/: attr_checklist.txt  attr_macro.rs  attr_macro_checklist.txt  attrmap.rs  attrmap2.rs  cell.rs  cell_.rs  composit.rs  condition.rs  config.rs  defaultstyles.rs  draw.rs  error.rs  format.rs  format_macro.rs  formula.rs  grouped.rs  lib.rs  macro_attr_draw.rs  macro_attr_fo.rs  macro_attr_number.rs  macro_attr_style.rs  macro_attr_svg.rs  macro_attr_table.rs  macro_attr_text.rs  macro_attr_xlink.rs  macro_format.rs  macro_style.rs  macro_units.rs  manifest.rs  mapstruct.rs  metadata.rs  ods.rs  ref_macro.rs  refs.rs  settings.rs  sheet.rs  sheet_.rs  style.rs  style_macro.rs  (+10 more)
src/ds/: bufstack.rs  detach.rs  mod.rs
src/format/: builder.rs  create.rs  formatpart.rs  mod.rs  number.txt  stylemap.rs  valueformat.rs
src/io/: filebuf.rs  format.rs  mod.rs  parse.rs  read.rs  tmp2zip.rs  write.rs  xmlwriter.rs  zip_out.rs
src/io/write/: tests.rs
src/locale/: cs_cz.rs  de_at.rs  default.rs  en_us.rs  mod.rs  und.rs
src/ods/: error.rs  mod.rs  read.rs  read_ods.rs  temp_zip.rs  tmp2zip.rs  write.rs  write2.rs  write_ods.rs  xml.rs  xml_util.rs  xmlwriter.rs
src/refs/: format.rs  parser.rs
src/refs_impl/: ast.rs  conv.rs  error.rs  format.rs  mod.rs  parser.rs  tokens.rs
src/refs_impl/tokens/: nomtokens.rs
src/sheet_/: tests.rs
src/style/: any_style.rs  attr.rs  attr_macro.rs  cell_style.rs  cellstyle.rs  col_style.rs  colstyle.rs  column_style.rs  fontface.rs  graphic_style.rs  graphicstyle.rs  masterpage.rs  mod.rs  pagelayout.rs  pagestyle.rs  paragraph_style.rs  paragraphstyle.rs  row_style.rs  rowstyle.rs  ruby.rs  stylemap.rs  table_style.rs  tablecolumn_style.rs  tablerow_style.rs  tablestyle.rs  tabstop.rs  text_style.rs  textstyle.rs  units.rs  units.txt
test_spreadsheet/: Cargo.toml
test_spreadsheet/src/: main.rs
tests/: artikel.rs  assert_sizes.rs  bench_attrmap.rs  bench_fast.rs  bench_sample.rs  bench_xparse.rs  draw_image.ods  formula.rs  issue1.rs  issue6.rs  lib_test.rs  orders.ods  pagelayout.rs  sizes.rs  styles.rs  test_54.rs  test_annotation.rs  test_attrmap.rs  test_attrmap_x.rs  test_config.rs  test_core_writing_loop.rs  test_default.rs  test_draw.rs  test_fods.rs  test_format.rs  test_format2.rs  test_formula.rs  test_grouped.rs  test_header.rs  test_locale.rs  test_mapstruct.rs  test_metadata.rs  test_pagelayout.rs  test_read_variants.rs  test_sample.rs  test_sheet.rs  test_split_hidden.rs  test_style.rs  test_style_attr.rs  test_text.rs  (+7 more)
