[package]
name = "spreadsheet-ods"
version = "0.16.0"
authors = ["thomasscharler <thscharler@gmail.com>"]
edition = "2021"
description = "Read and write ODS files"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/spreadsheet-ods"
readme = "README.md"
keywords = ["ODS", "spreadsheet", "OpenOffice", "LibreOffice"]
categories = ["parser-implementations"]
exclude = [".idea/*", ".gitignore"]

[features]
default = ["use_decimal", "all_locales"]
# Add conversions from rust_decimal.
use_decimal = []
# Check the xml output for wellformedness.
check_xml = []

all_locales = ["locale_de_AT", "locale_en_US"]
locale_de_AT = []
locale_en_US = []

[dependencies]
rust_decimal = "1.27"
rust_decimal_macros = "1.27"
color-rs = "0.8"
string_cache = "0.8"
mktemp = "0.5"
time = "0.3"
nom = "7.1"
nom_locate = "4.0"
icu_locid = "1.0"
lazy_static = "1.4"
unicode-ident = "1.0"
kparse = "3.0.4"

[dependencies.quick-xml]
version = "0.28.0"
# ?? Should be UTF-8, no need for encoding related stuff.
#features = ["encoding"]

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate", "time"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "alloc"]
