[package]
name = "spreadsheet-ods"
version = "0.24.0"
authors = ["thomasscharler <thscharler@gmail.com>"]
edition = "2021"
description = "Read and write ODS files"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/spreadsheet-ods"
readme = "README.md"
keywords = ["ODS", "spreadsheet", "OpenOffice", "LibreOffice"]
categories = ["parser-implementations"]
exclude = [".idea/*", ".gitignore"]

[features]
default = ["rust_decimal", "all_locales"]
# Add conversions from rust_decimal.
rust_decimal = ["dep:rust_decimal", "dep:rust_decimal_macros"]
# Check the xml output for wellformedness.
check_xml = []

all_locales = ["locale_de_AT", "locale_en_US"]
locale_de_AT = []
locale_en_US = []

# Debug: dump all xml
dump_xml = []
# Debug: dump unused tags/attributes
dump_unused = []

[dependencies]
rust_decimal = { version = "1.36", optional = true }
rust_decimal_macros = { version = "1.36", optional = true }
color-rs2 = { version = "0.9.0" }
num-traits = "0.2.19"
string_cache = "0.8"
nom = "7.1"
nom_locate = "4.2"
icu_locid = "1.5"
lazy_static = "1.5"
kparse = "3.0"
base64 = "0.22"
quick-xml = { version = "0.37", features = ["encoding"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "alloc"] }
get-size2 = { version = "0.3", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false