[package]
name = "test_spreadsheet"
version = "0.1.0"
authors = ["stommy <thscharler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.spreadsheet-ods]
path = ".."
version = "^0.5"
features = ["dump_unused"]
#features = ["dump_unused", "dump_xml"]
